--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,7 +5,7 @@
 	<title>Form</title>
 </head>
 <body>
-<form th:object="${user}" th:action="@{/validateUser}" method="post" >
+<form th:object="${user}" th:action="@{/}" method="post" >
 	<table>
 		<tr>
 			<td>Name:</td>
